k8s/media-services/prowlarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media-services
  labels:
    app: prowlarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: prowlarr
